<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity" >

    <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/connectionStatusTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
            android:id="@+id/tvLastKnownLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnLastLoc"
            android:layout_alignRight="@+id/btnLastLoc"
            android:layout_below="@+id/btnLastLoc"
            android:gravity="center"
            android:text="@string/commonBaseLocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
            android:id="@+id/btnLastLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvConnectionStatus"
            android:layout_alignRight="@+id/tvConnectionStatus"
            android:layout_below="@+id/tvConnectionStatus"
            android:layout_marginTop="18dp"
            android:onClick="buttonClicked"
            android:text="@string/btnLastLocTitle" />

    <Button
            android:id="@+id/btnStartRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvLocListener"
            android:layout_alignRight="@+id/tvLastKnownLoc"
            android:layout_below="@+id/etLocationInterval"
            android:onClick="buttonClicked"
            android:text="@string/commonBtnTitleStart" />

    <TextView
            android:id="@+id/tvLocationRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnStartRequest"
            android:layout_alignRight="@+id/btnStartRequest"
            android:layout_below="@+id/btnStartRequest"
            android:gravity="center"
            android:text="@string/commonBaseLocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/etLocationInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvLastKnownLoc"
            android:layout_alignTop="@+id/tvLocListener"
            android:ems="3"
            android:inputType="number"
            android:text="@string/defaultRefreshValue" >
    </EditText>

    <TextView
            android:id="@+id/tvLocListener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvLastKnownLoc"
            android:layout_below="@+id/tvLastKnownLoc"
            android:layout_marginTop="51dp"
            android:text="@string/locListenerTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
            android:id="@+id/tvPendingIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvLocationRequest"
            android:layout_alignRight="@+id/tvLocationRequest"
            android:layout_below="@+id/tvLocationRequest"
            android:layout_marginTop="50dp"
            android:text="@string/piTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
            android:id="@+id/btnRequestLocationIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvPendingIntent"
            android:layout_alignRight="@+id/tvPendingIntent"
            android:layout_below="@+id/tvPendingIntent"
            android:onClick="buttonClicked"
            android:text="@string/commonBtnTitleStart" />

</RelativeLayout>